--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,6 @@
   </head>
   <body>
     <div id="app">loading....</div>
+    <h1 class="text-3xl font-bold underline">Hello world!</h1>
   </body>
 </html>
